; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavutil/tests/extr_parseutils.c_main.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavutil/tests/extr_parseutils.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [31 x i8] c"Testing av_parse_video_rate()\0A\00", align 1
@.str.1 = private unnamed_addr constant [27 x i8] c"\0ATesting av_parse_color()\0A\00", align 1
@.str.2 = private unnamed_addr constant [30 x i8] c"\0ATesting av_small_strptime()\0A\00", align 1
@.str.3 = private unnamed_addr constant [26 x i8] c"\0ATesting av_parse_time()\0A\00", align 1
@.str.4 = private unnamed_addr constant [36 x i8] c"\0ATesting av_get_known_color_name()\0A\00", align 1
@.str.5 = private unnamed_addr constant [29 x i8] c"\0ATesting av_find_info_tag()\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main() #0 {
  %1 = alloca i32, align 4
  store i32 0, i32* %1, align 4
  %2 = call i32 @printf(i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str, i64 0, i64 0))
  %3 = call i32 (...) @test_av_parse_video_rate()
  %4 = call i32 @printf(i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str.1, i64 0, i64 0))
  %5 = call i32 (...) @test_av_parse_color()
  %6 = call i32 @printf(i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str.2, i64 0, i64 0))
  %7 = call i32 (...) @test_av_small_strptime()
  %8 = call i32 @printf(i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.3, i64 0, i64 0))
  %9 = call i32 (...) @test_av_parse_time()
  %10 = call i32 @printf(i8* getelementptr inbounds ([36 x i8], [36 x i8]* @.str.4, i64 0, i64 0))
  %11 = call i32 (...) @test_av_get_known_color_name()
  %12 = call i32 @printf(i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str.5, i64 0, i64 0))
  %13 = call i32 (...) @test_av_find_info_tag()
  ret i32 0
}

declare dso_local i32 @printf(i8*) #1

declare dso_local i32 @test_av_parse_video_rate(...) #1

declare dso_local i32 @test_av_parse_color(...) #1

declare dso_local i32 @test_av_small_strptime(...) #1

declare dso_local i32 @test_av_parse_time(...) #1

declare dso_local i32 @test_av_get_known_color_name(...) #1

declare dso_local i32 @test_av_find_info_tag(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
